# fastapi_template

./: .env.dist  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py
app/api/: __main__.py
app/api/controllers/: __init__.py  authentication.py  test.py
app/api/dependencies/: __init__.py  authentication.py  database.py  settings.py
app/api/schems/: __init__.py  user.py
app/dto/: __init__.py  base.py  token.py  user.py
app/infrastructure/database/: __init__.py  factory.py
app/infrastructure/database/alembic/: env.py
app/infrastructure/database/alembic/versions/: 2c4ecc4924d5_init.py
app/infrastructure/database/dao/: holder.py
app/infrastructure/database/dao/rdb/: __init__.py  base.py  user.py
app/infrastructure/database/models/: base.py  user.py
